--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+    " rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>goit-js-hw-08</title>
 </head>
 <body>
-    <ul class="gallery">
-        <li class="gallery-item">
-            <a class="gallery-link" href="large-image.jpg">
-                <img class="gallery-image" src="small-image.jpg" data-source="large-image.jpg" alt="Image description" />
-            </a>
-        </li>
-    </ul>
+    <ul class="gallery"></ul>
+    <script src="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+    "></script>
+    <script src="./js/gallery.js" type="module"></script>
 </body>
 </html>
